# Sentinel-Agent1

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CODEBASE_REPORT.md  CODEX_ARCHITECTURE.md  CONTEXT.md  CONTRIBUTING.md  CRATES_AUDIT.md  Cargo.toml  IMPLEMENTATION_GAPS.md  IMPL_PROGRESS.md  MIGRATION_STATUS.md  MODULE.bazel  PRD-v3.md  PRD.md  README.md  e2e_results.json  e2e_test.rs  prompt.txt  pyproject.toml  sentinel.toml
.devcontainer/: README.md  devcontainer.json  devcontainer.secure.json  init-firewall.sh  post_install.py
.github/: blob-size-allowlist.txt  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: archive-release-symbols-and-strip-binaries.sh  build-package-archive.sh  compute-bazel-windows-path.ps1  install-musl-build-tools.sh  run-argument-comment-lint-bazel.sh  run-bazel-ci.sh  run-bazel-query-ci.sh  (+8 more)
agent/: __init__.py  config.py  errors.py  main.py  types.py
backend/: _session_types.py  dataset_uploads.py  dependencies.py  kpis_scheduler.py  main.py  models.py  provider_auth.py  session_manager.py  usage.py
configs/: cli_agent_config.json  frontend_agent_config.json
crates/sentinel-agent-graph-store/: BUILD.bazel  Cargo.toml
crates/sentinel-agent-graph-store/src/: graph.rs  lib.rs  local.rs  store.rs
crates/sentinel-agent-graph-store/tests/: graph_store_test.rs
crates/sentinel-agent-identity/: BUILD.bazel  Cargo.toml
crates/sentinel-agent-identity/src/: bom.rs  crypto.rs  identity.rs  jwks.rs  lib.rs
crates/sentinel-agent-identity/tests/: crypto_test.rs  identity_test.rs
crates/sentinel-analytics/: BUILD.bazel  Cargo.toml
crates/sentinel-analytics/src/: accepted_lines.rs  capture.rs  client.rs  crash.rs  event.rs  events.rs  fact.rs  lib.rs  pipeline.rs  queue.rs  reducer.rs
crates/sentinel-analytics/tests/: capture_test.rs  client_test.rs  reducer_test.rs
crates/sentinel-app-server/: BUILD.bazel  Cargo.toml
crates/sentinel-app-server-client/: BUILD.bazel  Cargo.toml
crates/sentinel-app-server-client/src/: client.rs  embedded.rs  lib.rs
crates/sentinel-app-server-daemon/: BUILD.bazel  Cargo.toml
crates/sentinel-app-server-daemon/src/: daemon.rs
crates/sentinel-app-server-protocol/: BUILD.bazel  Cargo.toml
crates/sentinel-app-server-protocol/src/: api.rs  lib.rs  rpc.rs  version.rs
crates/sentinel-app-server-transport/: BUILD.bazel  Cargo.toml
crates/sentinel-app-server-transport/src/: auth.rs  lib.rs  transport.rs
crates/sentinel-app-server/src/: handler.rs  lib.rs  server.rs  session.rs
crates/sentinel-cli/: BUILD.bazel  Cargo.toml
crates/sentinel-cli/src/: ai.rs  approval.rs  display.rs  exec.rs  handler.rs  main.rs  proxy.rs  server.rs  tui.rs
crates/sentinel-cli/tests/: e2e_harness.rs
crates/sentinel-config/: BUILD.bazel  Cargo.toml
crates/sentinel-config/src/: config.rs  error.rs  lib.rs  watcher.rs
crates/sentinel-core/: BUILD.bazel  Cargo.toml
crates/sentinel-core/src/: agent.rs  approval.rs  compression.rs  context.rs  conversation.rs  cost.rs  diff_capture.rs  event.rs  event_bus.rs  hooks.rs  lib.rs  memory_file.rs  messaging.rs  phase.rs  pipeline.rs  prompt.rs  research_tool.rs  sandbox.rs  sanitize.rs  snapshot.rs  thread.rs  thread_store.rs  worktree.rs
crates/sentinel-headroom/: Cargo.toml  WORK_SUMMARY.md  sentinel-memory.db
crates/sentinel-headroom/src/: cache_aligner.rs  cache_optimizer.rs  ccr.rs  ccr_tracker.rs  classifier.rs  compress.rs  config.rs  integration.rs  intelligent_context.rs  lib.rs  metrics.rs  orchestrator.rs
crates/sentinel-headroom/src/memory/: config.rs  embeddings.rs  extractor.rs  injector.rs  mod.rs  store.rs  tool.rs  types.rs
crates/sentinel-headroom/src/strategies/: code.rs  code_aware.rs  diff.rs  html.rs  image.rs  image_aware.rs  json.rs  llmlingua.rs  logs.rs  mod.rs  search.rs  smart_crusher.rs  text.rs
crates/sentinel-mcp/: BUILD.bazel  Cargo.toml
crates/sentinel-mcp/src/: client.rs
crates/sentinel-protocol/: BUILD.bazel  Cargo.toml
crates/sentinel-protocol/src/: error.rs
crates/sentinel-provider/: BUILD.bazel  Cargo.toml
crates/sentinel-provider-info/: BUILD.bazel  Cargo.toml
crates/sentinel-provider-info/src/: builtin.rs  provider.rs
crates/sentinel-provider/src/: anthropic.rs  discovery.rs  error.rs  fallback.rs  lib.rs  local.rs  openai.rs  prompt_cache.rs  provider.rs  router.rs  switcher.rs
crates/sentinel-provider/src/protocols/: anthropic_messages.rs  mod.rs  openai_chat.rs
crates/sentinel-provider/src/route/: auth.rs  endpoint.rs  framing.rs  mod.rs  protocol.rs
crates/sentinel-proxy/: Cargo.toml
crates/sentinel-proxy/src/: compression.rs  config.rs  handlers.rs  lib.rs  server.rs  stats.rs
crates/sentinel-sandbox/: BUILD.bazel  Cargo.toml
crates/sentinel-sandbox/src/: platform.rs
crates/sentinel-sdk/: Cargo.toml
crates/sentinel-sdk/src/: agent.rs  lib.rs  session.rs
crates/sentinel-tools/: BUILD.bazel  Cargo.toml
crates/sentinel-tools/src/: builtin.rs  registry.rs  tool.rs
crates/sentinel-tools/tests/: e2e_test.rs  tools_test.rs
docs/: ARCHITECTURE.md  CRATES_AUDIT.md  GPU_ACCELERATED_RESEARCH.md  LLM_GATEWAY_ARCHITECTURE.md  MIGRATION_STATUS.md  PRD-v2.md  SYSTEM_DESIGN.md  codex-impl-plan.md  engineering-plan.md  memory-system.md  paper-gpu-agent.md
frontend/: CONTEXT.md  STATUS.md  package-lock.json  package.json
patches/: BUILD.bazel  macos_sdk_frameworks.patch  openssl_windows.patch  ring_windows_arm64.patch  ring_windows_gnullvm.patch  ring_windows_msvc.patch  rules_cc_linker_args.patch  rules_rs_build_script.patch  rules_rust_arm64.patch  rules_rust_gnullvm.patch  rules_rust_process_wrapper.patch  rusqlite_windows.patch
scripts/: asciicheck.py  build_codex_package.py  build_kpis.py  build_sft.py  check-module-bazel-lock.sh  check_blob_size.py  format.py  install.py  just_shell.py  mock_responses_websocket_server.py  prioritize_backlog.py  run_tui_with_exec_server.sh  start-codex-exec.sh  sweep_orphan_sandboxes.py  test-remote-env.sh
sentinel_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+209 files in other folders)
