[package]
name = "sentinel-analytics"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true

sentinel-protocol = { path = "../sentinel-protocol" }
