[package]
name = "sentinel-analytics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
hex.workspace = true
reqwest.workspace = true
base64.workspace = true

sentinel-protocol = { path = "../sentinel-protocol" }
sha1 = "0.10"
thiserror.workspace = true
