[package]
name = "sentinel-app-server-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

sentinel-app-server = { path = "../sentinel-app-server" }
sentinel-app-server-protocol = { path = "../sentinel-app-server-protocol" }
sentinel-app-server-transport = { path = "../sentinel-app-server-transport" }
