load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "sentinel-app-server",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "@sentinel_crates//:serde",
        "@sentinel_crates//:serde_json",
        "@sentinel_crates//:tokio",
        "@sentinel_crates//:thiserror",
        "@sentinel_crates//:tracing",
        "@sentinel_crates//:anyhow",
        "@sentinel_crates//:uuid",
        "@sentinel_crates//:async-trait",
        "@sentinel_crates//:futures-util",
        "@sentinel_crates//:tokio-stream",
        "//crates/sentinel-protocol",
        "//crates/sentinel-core",
        "//crates/sentinel-tools",
        "//crates/sentinel-provider",
        "//crates/sentinel-provider-info",
        "//crates/sentinel-config",
        "//crates/sentinel-sandbox",
        "//crates/sentinel-exec",
        "//crates/sentinel-mcp",
        "//crates/sentinel-app-server-protocol",
        "//crates/sentinel-app-server-transport",
        "//crates/sentinel-analytics",
        "//crates/sentinel-agent-identity",
        "//crates/sentinel-agent-graph-store",
    ],
    visibility = ["//visibility:public"],
)
