load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "sentinel-cli",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "@sentinel_crates//:anyhow",
        "@sentinel_crates//:tokio",
        "@sentinel_crates//:tracing",
        "@sentinel_crates//:tracing-subscriber",
        "@sentinel_crates//:serde_json",
        "@sentinel_crates//:colored",
        "@sentinel_crates//:futures",
        "@sentinel_crates//:async-trait",
        "@sentinel_crates//:hex",
        "@sentinel_crates//:reqwest",
        "//crates/sentinel-core",
        "//crates/sentinel-config",
        "//crates/sentinel-provider",
        "//crates/sentinel-tools",
        "//crates/sentinel-mcp",
        "//crates/sentinel-app-server",
        "//crates/sentinel-app-server-client",
        "//crates/sentinel-app-server-transport",
        "//crates/sentinel-agent-identity",
        "//crates/sentinel-sandbox",
    ],
    visibility = ["//visibility:public"],
)
