[package]
name = "sentinel-config"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
dirs.workspace = true
tokio.workspace = true
tracing.workspace = true

sentinel-provider-info = { path = "../sentinel-provider-info" }
sentinel-mcp = { path = "../sentinel-mcp" }
