[package]
name = "sentinel-headroom"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Adaptive content compression for LLM context — compress tool outputs, logs, code, JSON, diffs before they reach the model"

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tracing.workspace = true
thiserror.workspace = true
regex.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
hex.workspace = true
lru.workspace = true
sha2.workspace = true

sentinel-tools = { path = "../sentinel-tools" }
sentinel-core = { path = "../sentinel-core" }
