[package]
name = "sentinel-headroom"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Adaptive content compression for LLM context — compress tool outputs, logs, code, JSON, diffs before they reach the model"

[features]
default = []
code-aware = [
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-rust",
    "tree-sitter-go",
    "tree-sitter-java",
    "tree-sitter-c",
    "tree-sitter-cpp",
]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
tracing.workspace = true
thiserror.workspace = true
regex.workspace = true
chrono.workspace = true
uuid.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
hex.workspace = true
lru.workspace = true
sha2.workspace = true
once_cell = "1"
base64.workspace = true
image = "0.25"

tree-sitter = { version = "0.24", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-javascript = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-go = { version = "0.23", optional = true }
tree-sitter-java = { version = "0.23", optional = true }
tree-sitter-c = { version = "0.23", optional = true }
tree-sitter-cpp = { version = "0.23", optional = true }

sentinel-tools = { path = "../sentinel-tools" }
sentinel-core = { path = "../sentinel-core" }
sentinel-protocol = { path = "../sentinel-protocol" }
