load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "sentinel-protocol",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "@sentinel_crates//:serde",
        "@sentinel_crates//:serde_json",
        "@sentinel_crates//:thiserror",
    ],
    visibility = ["//visibility:public"],
)
