load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "sentinel-provider",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "@sentinel_crates//:serde",
        "@sentinel_crates//:serde_json",
        "@sentinel_crates//:anyhow",
        "@sentinel_crates//:thiserror",
        "@sentinel_crates//:reqwest",
        "@sentinel_crates//:tokio",
        "@sentinel_crates//:tokio-stream",
        "@sentinel_crates//:tracing",
        "@sentinel_crates//:async-trait",
        "@sentinel_crates//:futures",
        "//crates/sentinel-protocol",
        "//crates/sentinel-provider-info",
    ],
    visibility = ["//visibility:public"],
)
