load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "sentinel-sandbox",
    srcs = glob(["src/**/*.rs"]),
    edition = "2021",
    deps = [
        "@sentinel_crates//:serde",
        "@sentinel_crates//:serde_json",
        "@sentinel_crates//:anyhow",
        "@sentinel_crates//:thiserror",
        "@sentinel_crates//:tracing",
    ],
    visibility = ["//visibility:public"],
)
